--- a/styles.css
+++ b/styles.css
@@ -46,11 +46,11 @@ body {
     position: relative;
     display: flex;
     flex-direction: column;
-    width: 370px;
+    width: 50em;
     max-width: 90%;
 }
 .section-container {
-    padding: 25px 45px 25px 30px;
+    padding: 1.56em 2.7em 1.56em 2em;
 }
 .one {
     border-radius: 10px 10px 0 0;
@@ -64,10 +64,13 @@ body {
     background-color: var(--veryDarkCyan);
 }.section-container img {
     display: block;
+    width: 3.6em;
+    height: auto; 
+    padding: 1.25em 0;
 }
 .section-container h1{
     color: var(--veryLightGray);
-    padding: 25px 0;
+    padding-bottom: 1em;
     font-family: "Big Shoulders Display", sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
@@ -76,15 +79,22 @@ body {
 .section-container p {
     color: var(--transparentWhite);
     font-family: "Lexend Deca",sans-serif;
-    line-height: 25px;
-    font-size: 15px;
+    line-height: 1.56em;
+    height: auto;
+    font-size: 0.94em;
     margin-bottom: 30px;
 }
 .section-container button {
-    border: none;
+    border: 2px solid var(--veryLightGray);
     padding: 12px 30px;
-    border-radius: 20px;
+    border-radius: 1.25em;
     background-color: var(--veryLightGray);
+}
+.section-container button::before {
+    content: "";
+}
+.section-container button::after {
+    content: "";
 }
 .one button {
     color: var(--brightOrange);
@@ -114,9 +124,6 @@ body {
     body {
         margin: 0;
     }
-    .card {
-        width: 800px;
-    }
     .section {
         display: flex;
         flex-direction: row;
@@ -134,9 +141,9 @@ body {
     bottom: 0;
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
-    font-size: 14px;
+    font-size: 1em;
     text-align: center;
     width: 100%;
     padding: 10px 0;
 }
-.attribution a {color: hsl(228, 45%, 44%);}
+.attribution a {color: hsl(180, 83%, 47%)}
